src/test/deca/context/valid/thibault/optimisation/testOpt5.deca
{
	float b;
	boolean c;
	float d;

	c=true;
	if(c==true){
			b=5+5;
			}
		else{
			c=5+5;
			}
}
