src/test/deca/context/invalid/pierre/objects/newWrongClass.deca
class A {}
class B {
    void test() {
        B b = new A();
    }
}
{}
